# LykOS

./: README.md  config.chariot
.github/: CONTRIBUTING.md
apps/: client.c  init.asm  init.c  meson.build  server.c
kernel/: meson.build  meson_options.txt
kernel/include/: assert.h  log.h
kernel/include/arch/: clock.h  irq.h  lcpu.h  paging.h  thread.h  timer.h
kernel/include/arch/aarch64/: int.h
kernel/include/arch/aarch64/abi/: stack.h
kernel/include/arch/aarch64/devices/: gic.h  timer.h
kernel/include/arch/x86_64/: cpuid.h  fpu.h  syscall.h
kernel/include/arch/x86_64/devices/: hpet.h  ioapic.h  lapic.h
kernel/include/arch/x86_64/tables/: gdt.h  idt.h  tss.h
kernel/include/dev/: bus.h  device.h
kernel/include/dev/acpi/tables/: hpet.h  mcfg.h
kernel/include/dev/bus/: pci.h
kernel/include/dev/storage/: drive.h
kernel/include/fs/: path.h  ustar.h  vfs.h
kernel/include/mm/: dma.h  mm.h  mmio.h  pm.h  vm.h
kernel/include/mm/vm/: object.h  vm_object.h
kernel/include/proc/: fd.h  proc.h  sched.h  thread.h
kernel/include/sys/: fd.h  file.h  init.h  poll.h  proc.h  sched.h  smp.h  socket.h  syscall.h  thread.h  types.h  uio.h  unistd.h
kernel/include/utils/: elf.h  ref.h  xarray.h
kernel/source/: kernel.c  log.c  meson.build  panic.c
kernel/source/arch/aarch64/: clock.c  entry.c  evt.S  int.c  lcpu.c  meson.build  paging.c  thread.c  userspace.S
kernel/source/arch/aarch64/abi/: meson.build  stack.c
kernel/source/arch/aarch64/devices/: gic.c  gicv2.c  timer.c
kernel/source/arch/x86_64/: cpuid.c  entry.c  fpu.c  int.c  lcpu.c  mem.asm  meson.build  paging.c  syscall.asm  syscall.c  thread.asm  thread.c  userspace.asm
kernel/source/arch/x86_64/abi/: stack.c
kernel/source/arch/x86_64/devices/: hpet.c  ioapic.c  lapic.c  rtc.c
kernel/source/arch/x86_64/tables/: gdt.c  idt.c  tss.c
kernel/source/dev/: bus.c  device.c
kernel/source/dev/storage/: drive.c
kernel/source/dev/virtual/: virtual.c
kernel/source/fs/: meson.build  path.c  ramfs.c  ustar.c  vfs.c
kernel/source/mm/: dma.c  kmem.c  meson.build  mm.c  mmio.c  pm.c  vm.c
kernel/source/mm/vm/: anon.c  meson.build  object.c  phys.c  shadow.c  vm.c  vm_anon.c  vm_object.c  vm_phys.c  vm_shadow.c
kernel/source/mod/: module.c
kernel/source/proc/: exec.c  fd.c  init.c  proc.c  sched.c  smp.c  thread.c
kernel/source/sys/: fd.c  file.c  fileio.c  fs.c  init.c  memory.c  meson.build  proc.c  reaper.c  sched.c  smp.c  syscall.c  thread.c
kernel/source/sys/file/: file.c  file_socket.c  file_vnode.c  meson.build
kernel/source/sys/socket/: meson.build  socket.c  socket_unix.c
kernel/source/sys/syscalls/: debug.c  fileio.c  memory.c  meson.build  misc.c  proc.c  socket.c  syscall.c
kernel/source/utils/: meson.build  xarray.c
modules/: meson.build
modules/bus/: meson.build
modules/bus/pci/: main.c  meson.build
modules/input/: meson.build
modules/input/ps2/: main.c  meson.build  ps2.c  ps2.h
modules/storage/: meson.build
modules/storage/nvme/: main.c  meson.build  nvme.c  nvme.h  nvme_hw.h
recipes/tools/: autotools.chariot  gcc.chariot  util-macros.chariot  xorgproto.chariot  xtrans.chariot
scripts/: a2l.sh  objdump.sh  run.sh
support/cross-files/: lykos-aarch64.ini
