subdir('abi')
subdir('devices')
subdir('tables')

asm_files += files(
    'syscall.asm',
    'thread.asm',
    'userspace.asm',
)

c_files += files(
    'cpuid.c',
    'entry.c',
    'fpu.c',
    'ioport.c',
    'lcpu.c',
    'msr.c',
    'paging.c',
    'serial.c',
    'syscall.c',
    'tcb.c',
    'thread.c',
)
